# jobhunter

./: README.md  main.py  pyproject.toml
agents/: compliance.py  diplomat.py  profiler.py  scout.py
app/frontend/: package-lock.json  vite.config.ts
app/frontend/src/: App.css  App.tsx  index.css
tools/: job_mcp_server.py
