[project]
name = "gemini-nexus-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "google-adk>=1.27.1",
    "google-cloud-aiplatform>=1.141.0",
    "google-genai>=1.67.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
]
